Add launcher subproject, refactor a bit