@@ -1,5 +1,6 @@
 package com.specificlanguages.mops.cli
 
+import org.junit.jupiter.api.io.TempDir
 import java.nio.file.Files
 import java.nio.file.Path
 import kotlin.io.path.createDirectories
@@ -7,39 +8,27 @@ import kotlin.io.path.exists
 import kotlin.io.path.pathString
 import kotlin.test.Test
 import kotlin.test.assertContains
-import kotlin.test.assertEquals
 import kotlin.test.assertTrue
-import org.junit.jupiter.api.io.TempDir
 
 class DaemonLaunchTest {
     @TempDir
     lateinit var tempDir: Path
 
     @Test
-    fun `daemon java executable uses platform specific layout`() {
-        val macHome = tempDir.resolve("mac-jbr").createDirectories()
-        val macExecutable = macHome.resolve("Contents/Home/bin/java")
-        macExecutable.parent.createDirectories()
-        Files.writeString(macExecutable, "")
-        val windowsHome = tempDir.resolve("windows-jbr").createDirectories()
-        val linuxHome = tempDir.resolve("linux-jbr").createDirectories()
-
-        assertEquals(macExecutable, DaemonJavaHome.executableIn(macHome, "Mac OS X"))
-        assertEquals(windowsHome.resolve("bin/java.exe"), DaemonJavaHome.executableIn(windowsHome, "Windows 11"))
-        assertEquals(linuxHome.resolve("bin/java"), DaemonJavaHome.executableIn(linuxHome, "Linux"))
-    }
-
-    @Test
     fun `daemon launch uses user-level state outside project and MPS jvm settings`() {
         val project = tempDir.mpsProject()
         val mpsHome = tempDir.resolve("mps").createDirectories()
-        Files.writeString(mpsHome.resolve("build.properties"), "mps.build.number=2024.1\n")
+        Files.writeString(mpsHome.resolve("build.properties"), "mps.build.number=MPS-242.1234.567\n")
+
         mpsHome.resolve("lib/jna").createDirectories()
+        mpsHome.resolve("jbr/Contents/Home").createDirectories()
+
         val daemonHome = tempDir.resolve("daemon-home")
 
         val launch = DaemonLaunch.prepare(
             projectPath = project,
             mpsHome = mpsHome,
+            javaHome = null,
             environment = daemonEnvironment(daemonHome),
         )
 
@@ -54,34 +43,22 @@ class DaemonLaunchTest {
     }
 
     @Test
-    fun `daemon launch still prepares a log path when mps home is invalid`() {
+    fun `daemon launch uses bundled JBR if explicit not passed`() {
         val project = tempDir.mpsProject()
         val mpsHome = tempDir.resolve("mps").createDirectories()
+        Files.writeString(mpsHome.resolve("build.properties"), "mps.build.number=MPS-242.1234.567\n")
+        mpsHome.resolve("lib/jna").createDirectories()
+        val daemonHome = tempDir.resolve("daemon-home")
+
+        mpsHome.resolve("jbr/Contents/Home").createDirectories()
 
         val launch = DaemonLaunch.prepare(
             projectPath = project,
             mpsHome = mpsHome,
-            environment = daemonEnvironment(tempDir.resolve("daemon-home")),
+            javaHome = null,
+            environment = daemonEnvironment(daemonHome),
         )
 
-        assertTrue(launch.logPath.parent.exists())
-        assertTrue(launch.jvmArgs.any { it.startsWith("--add-opens=java.base/java.lang=") })
-    }
-
-    @Test
-    fun `mps jvm args compare build versions numerically`() {
-        val mpsHome = tempDir.resolve("mps").createDirectories()
-        Files.writeString(mpsHome.resolve("build.properties"), "mps.build.number=2025.10\n")
-        mpsHome.resolve("lib/jna").createDirectories()
-
-        val args = MpsJvmArgs.forMpsHome(
-            mpsHome = mpsHome,
-            ideaConfigDir = tempDir.resolve("config"),
-            ideaSystemDir = tempDir.resolve("system"),
-        )
-
-        assertContains(args, "-Didea.platform.prefix=MPS")
-        assertContains(args, "-Dintellij.platform.load.app.info.from.resources=true")
-        assertContains(args, "-Djna.boot.library.path=${mpsHome.resolve("lib/jna").pathString}")
+        assertTrue(launch.javaHome.pathString.startsWith(mpsHome.resolve("jbr").pathString))
     }
 }
